<resources>
    <string name="app_name">GlucoMetrix</string>
    <string name="title_activity_starting_view">GlucoMatrix</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo">logo</string>
    <string name="title_activity_loading">GlucoMatrix</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="please_enter_login_and_password">Please enter login and password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="wykresy">Wykresy</string>
    <string name="zobacz_cukry">Zobacz cukry</string>
    <string name="oblicz_wska_niki">Oblicz wskaźniki</string>
    <string name="hemoglobina_glikowana">hemoglobina glikowana</string>
    <string name="graph">graph</string>
    <string name="dzienniczek_cukrzyka">Dzienniczek cukrzyka</string>
    <string name="hba1c">HbA1c</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour">hour</string>
    <string name="glucose">glucose</string>
    <string name="Opis">opis</string>
    <string name="_26_lipiec_2020">26 lipiec 2020</string>
    <string name="submit">submit</string>
    <string name="dash">dash</string>
    <string name="podaj_z_ilu_dni_chcesz_obliczy_redni_glukoz">Podaj z ilu dni chcesz obliczyć średnią glukozę</string>
    <string name="rednia_glukoza">Średnia glukoza:</string>
    <string name="oblicz">Oblicz</string>
    <string name="hba1c_wynosi">HbA1c wynosi</string>
    <string name="zaznacz_kt_re_wska_niki_ci_interesuj">Zaznacz, które wskaźniki Cię interesują</string>
    <string name="srednia_gluoza">Średnia glukoza</string>
    <string name="podaj_redni_glukoz_z_min_30_dni_by_uzyska_szacowany_wynik_hba1c">Podaj średnią glukozę z min. 30 dni, by uzyskać szacowany wynik HbA1c</string>
    <string name="artykuly">Artykuły</string>
    <string name="powiklania_cukrzycy">Powikłania cukrzycy</string>
    <string name="przykazania_cukrzyka">Przykazania cukrzyka</string>
    <string name="insulinoodporno">Insulinoodporność</string>
    <string name="dieta_dla_cukrzyka">Dieta dla cukrzyka</string>
    <string name="artyku_l">Artykuły</string>
    <string name="glucoMatrix">GlucoMatrix</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="developed_by_filip_koz_owski">Developed by Filip Kozłowski</string>
    <string name="konto">Konto</string>
    <string name="dane_konta">Dane konta</string>
    <string name="haslo">Hasło: </string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika: </string>
    <string name="zmien_awatar">Zmień awatar</string>
    <string name="awatar">Awatar</string>
    <string name="zmien_nazwe_uzytkownika">Zmień nazwę użytkownika</string>
    <string name="zmien_haslo">Zmień hasło</string>
    <string name="insert_new_login">Wprowadź nową nazwę użytkownika</string>
    <string name="insert_new_paassword">Wprowadź nowe hasło</string>
    <string name="invalid_login_or_passwd">Nazwa użytkownika lub hasło jest niepoprawne</string>
    <string name="description">Description</string>
    <string name="Gucose">Glucose</string>
    <string name="add_glucose">Add glucose</string>
    <string name="poka">Pokaż</string>
    <string name="cukrzycopedia">Cukrzycopedia</string>
    <string name="artyku_y">Artykuły</string>
    <string name="twoje_konto">Twoje konto</string>
    <string name="dodaj_pomiar">Dodaj pomiar</string>
    <string name="pomiar_glukozy">Pomiar glukozy</string>
    <string name="wskazniki">Wskaźniki</string>
    <string name="login_">Login:</string>
    <string name="zmie_dane_logowania">Zmień dane logowania</string>
    <string name="title_activity_maps">Map</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="logout">Wyloguj się</string>
    <string name="wykres">Wykres pomiarów</string>
</resources>