<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".indicators.Indicators">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zaznacz_kt_re_wska_niki_ci_interesuj"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="5sp"/>
        <CheckBox
            android:id="@+id/checkBoxAverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srednia_gluoza"
            android:layout_marginBottom="5sp"/>
        <CheckBox
            android:id="@+id/checkBoxHbA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hba1c"
            android:layout_marginBottom="5sp"/>
        <Button
            android:id="@+id/butttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poka"
            android:layout_marginBottom="10sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Wyniki">
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Wyniki2">
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>