<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/loginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_login_and_password"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/light_blue_900"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewloginText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextTextUserLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewPasswordText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>
        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:textColor="#F00"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="25sp">

            <Button
                android:id="@+id/buttonLogIn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>