<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGluco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        tools:ignore="RtlSymmetry">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/HeaderArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/dodaj_pomiar"
                android:textSize="30sp"
                android:textColor="@color/light_blue_900"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pomiar_glukozy"
                android:textSize="20sp"
                android:paddingEnd="7dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/editGlucoseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:autofillHints="120"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Opis"
                android:textSize="20sp"
                android:paddingEnd="7dp"
                tools:ignore="RtlSymmetry" />
            <Spinner
                android:id="@+id/desc_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addConfirmation"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_glucose"
            android:layout_gravity="bottom|center"
            android:id="@+id/AddButton"
            android:padding="5sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>