<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/list_item"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/Opis"
                android:textSize="20sp" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textHour"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="68dp"
                    android:text="@string/hour"
                    android:textColor="#4CAF50"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textGlucose"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/glucose"
                    android:textColor="#00F"
                    android:textSize="25sp" />
            </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>