<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50sp">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
         android:layout_marginTop="50sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_measures"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/imageViewMeasures"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:srcCompat="@drawable/hba1c__3_"
                    android:contentDescription="@string/hba1c"/>

                <TextView
                    android:id="@+id/textViewMeasures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oblicz_wska_niki"
                    android:layout_gravity="bottom|center"
                    android:textSize="20sp"
                    android:textColor="@color/light_blue_900"/>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_graph"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/imageViewGraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:srcCompat="@drawable/wykres"
                    android:contentDescription="@string/graph" />

                <TextView
                    android:id="@+id/textViewGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wykres"
                    android:layout_gravity="bottom|center"
                    android:textSize="20sp"
                    android:textColor="@color/light_blue_900"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_results"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/imageViewResults"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:srcCompat="@drawable/dzienniczek_cukrzyka"
                    android:contentDescription="@string/dzienniczek_cukrzyka" />

                <TextView
                    android:id="@+id/textViewResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zobacz_cukry"
                    android:layout_gravity="bottom|center"
                    android:textSize="20sp"
                    android:textColor="@color/light_blue_900"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_articles"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/imageViewArticles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:srcCompat="@drawable/articles"
                    android:contentDescription="@string/artykuly" />

                <TextView
                    android:id="@+id/textViewArticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artykuly"
                    android:layout_gravity="bottom|center"
                    android:textSize="20sp"
                    android:textColor="@color/light_blue_900"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/map_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/map_view_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:srcCompat="@drawable/mapy"
                    android:contentDescription="@string/dzienniczek_cukrzyka" />

                <TextView
                    android:id="@+id/map_view_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lokalizacja"
                    android:layout_gravity="bottom|center"
                    android:textSize="20sp"
                    android:textColor="@color/light_blue_900"/>
            </androidx.cardview.widget.CardView>
               <androidx.cardview.widget.CardView
                   android:id="@+id/card_view_calendar"
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   card_view:cardCornerRadius="4dp"
                   android:layout_marginBottom="10dp"
                   android:layout_marginEnd="10dp"
                   app:cardElevation="5dp">

                   <ImageView
                       android:id="@+id/card_view_calendar_img"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       card_view:srcCompat="@drawable/kalendarz"
                       android:contentDescription="@string/dzienniczek_cukrzyka" />

                   <TextView
                       android:id="@+id/card_view_calendar_text"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/kalendarz"
                       android:layout_gravity="bottom|center"
                       android:textSize="20sp"
                       android:textColor="@color/light_blue_900"/>
               </androidx.cardview.widget.CardView>
           </LinearLayout>
    </LinearLayout>
</ScrollView>
    <include
        layout="@layout/toolbar"/>
</androidx.constraintlayout.widget.ConstraintLayout>