<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".indicators.Hb41cFragm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/HbA1cInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/podaj_redni_glukoz_z_min_30_dni_by_uzyska_szacowany_wynik_hba1c"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/HbA1cInsert"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autofillHints="30"
                    android:ems="2"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center"
                    tools:ignore="LabelFor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonHbA1c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oblicz" />

                <TextView
                    android:id="@+id/HbA1cText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/hba1c_wynosi" />

                <TextView
                    android:id="@+id/HbA1c"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text=""
                    android:textColor="@color/light_blue_600"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>