<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".indicators.AverageGlucose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Opis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podaj_z_ilu_dni_chcesz_obliczy_redni_glukoz"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/daysAverage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="numberDecimal"
                android:autofillHints="1"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/butttonAVG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblicz"
                android:padding="5sp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>
            <TextView
                android:id="@+id/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rednia_glukoza"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/resultAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:text=""/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/AvgBlock"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/black_overlay"
                    android:padding="10dp"
                    android:text=""
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>